# bdns_core

./: .env.example  .gitignore  README.md  pyproject.toml
bdns_core/: __init__.py  pyproject.toml
bdns_core/bdns_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bdns_core/src/bdns_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bdns_core/src/bdns_core/auth/: __init__.py  jwt_auth.py
bdns_core/src/bdns_core/business/: equivalencia.py
bdns_core/src/bdns_core/db/: __init__.py  enums.py  etl_models.py  manager.py  models.py  nif_utils.py
scripts/: init_db.py
src/bdns_core/: __init__.py  logging.py
src/bdns_core/auth/: __init__.py  dependencies.py  models.py  secrets.py  service.py
src/bdns_core/config/: __init__.py  base.py  etl.py  portal.py
src/bdns_core/db/: __init__.py  base.py  etl_models.py  manager.py  models.py  session.py  utils.py
src/bdns_core/db/bootstrap/: 00_readme.md  01_extensions.sql  02_schemas.sql  03_partition_functions.sql  bootstrap.py
